# stock-portfolio-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.rs  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: account_commands.rs  accounts.rs  ai.rs  alerts.rs  categories.rs  category_commands.rs  dashboard.rs  exchange_rates.rs  holding_commands.rs  holdings.rs  import_export.rs  mod.rs  ocr.rs  performance.rs  quarterly.rs  quote_provider.rs  quotes.rs  review.rs  snapshots.rs  statistics.rs  transaction_commands.rs  transactions.rs
src-tauri/src/db/: migrations.rs  mod.rs  tests.rs
src-tauri/src/models/: account.rs  ai_config.rs  alert.rs  category.rs  dashboard.rs  holding.rs  import_export.rs  mod.rs  performance.rs  quarterly.rs  quote.rs  quote_provider.rs  review.rs  transaction.rs
src-tauri/src/services/: account_service.rs  ai_config_service.rs  alert_service.rs  category_service.rs  exchange_rate_service.rs  holding_service.rs  http_client.rs  import_export_service.rs  mod.rs  performance_service.rs  quarterly_service.rs  quote_provider_service.rs  quote_service.rs  review_service.rs  snapshot_service.rs  transaction_service.rs
src/api/: index.ts
src/components/Layout/: MainLayout.tsx
src/components/charts/: PieChart.tsx
src/pages/: AccountsPage.tsx  CategoriesPage.tsx  HoldingsPage.tsx  TestMDEditor.tsx  TransactionsPage.tsx
src/pages/AI/: index.tsx
src/pages/Accounts/: index.tsx
src/pages/Alerts/: index.tsx
src/pages/Categories/: index.tsx
src/pages/Dashboard/: HoldingsTable.tsx  SummaryCards.tsx  index.tsx
src/pages/Holdings/: ImportHoldingFromCsvModal.tsx  ImportHoldingFromFirstradeCsvModal.tsx  ImportHoldingFromIbCsvModal.tsx  ImportHoldingFromMoomooCsvModal.tsx  index.tsx
src/pages/Import/: index.tsx
src/pages/Performance/: AttributionChart.tsx  DrawdownChart.tsx  MonthlyReturnsTable.tsx  PerformanceSummaryCards.tsx  RankingChart.tsx  ReturnChart.tsx  RiskMetricsPanel.tsx  TimeRangeSelector.tsx  index.tsx
src/pages/Quarterly/: ComparisonCharts.tsx  HoldingChangesTable.tsx  HoldingNotesEditor.tsx  NotesTimeline.tsx  QuarterComparison.tsx  QuarterlyNotesEditor.tsx  QuarterlyTransactionsSection.tsx  SnapshotDetail.tsx  SnapshotHoldingsTable.tsx  TrendCharts.tsx  TrendsPage.tsx  index.tsx
src/pages/Review/: index.tsx
src/pages/Settings/: GeneralSettings.tsx  index.tsx
src/pages/Statistics/: AccountTab.tsx  CategoryTab.tsx  MarketTab.tsx  OverviewTab.tsx  index.tsx
src/pages/Transactions/: ImportFromFirstradeCsvModal.tsx  ImportFromIbCsvModal.tsx  ImportFromImageModal.tsx  ImportFromMoomooCsvModal.tsx  ImportFromThsCsvModal.tsx  index.tsx
src/stores/: accountStore.ts  aiStore.ts  alertStore.ts  categoryStore.ts  dashboardStore.ts  exchangeRateStore.ts  holdingStore.ts  performanceStore.ts  quarterlyStore.ts  quoteStore.ts  reviewStore.ts  transactionStore.ts
src/types/: index.ts
tools/backfill_open_transactions/: Cargo.toml  README.md
tools/backfill_open_transactions/src/: main.rs
