[package]
name = "stock-portfolio-manager"
version = "0.1.0"
description = "Stock Portfolio Manager - A desktop app for managing stock portfolios across US, CN, and HK markets"
authors = ["you"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["test"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
