[package]
name = "stock-portfolio-manager"
version = "0.6.0"
description = "Stock Portfolio Manager"
authors = []
edition = "2021"

[[bin]]
name = "stock-portfolio-manager"
path = "src/main.rs"

[lib]
name = "stock_portfolio_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "cookies"] }
csv = "1"
sys-locale = "0.3"
regex = "1.12.3"
base64 = "0.22.1"
urlencoding = "2.1.3"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSMenu", "NSMenuItem"], default-features = false }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSThread"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
